--- a/LaTeX報告/4072pj1.tex
+++ b/LaTeX報告/4072pj1.tex
@@ -174,12 +174,13 @@ Application of reinforcement
 \input{4_simulation.tex}
 \input{5_server.tex}
 \input{6_training_result.tex}
-\input{7_conclusion.tex}
+\input{7_suggestion.tex}
+\input{8_discussions.tex}
 %=---------------------參考文獻----------------------=%
-\input{8_reference.tex}
+\input{9_reference.tex}
 %=---------------附錄-----------------=%
 \addcontentsline{toc}{chapter}{附錄} %新增目錄名稱
-\input{9_appendix.tex}
+\input{10_appendix.tex}
 \newpage
 %=-------------作者簡介-----------------=%
     \addcontentsline{toc}{chapter}{作者簡介}
