--- a/LaTeX報告/4072pj1.tex
+++ b/LaTeX報告/4072pj1.tex
@@ -189,7 +189,7 @@ Application of reinforcement
 	\end{center}	
 	{\begin{textblock}{6}(0,0.5)
 	\begin{figure}
-	\includegraphics[width=1.15in]{40723110} 
+	\includegraphics[width=1.15in,height=1in]{test10} 
 	\end{figure}
 	\end{textblock}}
 	{\renewcommand\baselinestretch{0.99}\selectfont %設定以下行距
@@ -206,11 +206,11 @@ Application of reinforcement
     \hspace*{\fill} \\
     \fontsize{14pt}{0em}\selectfont \makebox[4em][s]{經歷}\enspace:\enspace
     \end{textblock}}}
-    \hspace*{\fill} \\
-
+   % \hspace*{\fill} \\
+   \vspace{2em}
 	{\begin{textblock}{6}(0,2.3)
 	\begin{figure}
-	\includegraphics[width=1.15in]{40723115} 
+	\includegraphics[width=1.15in,height=1in]{test15} 
     \end{figure}
     \end{textblock}}
     {\renewcommand\baselinestretch{0.99}
@@ -229,10 +229,11 @@ Application of reinforcement
 \hspace*{\fill} \\
 \fontsize{14pt}{0em}\selectfont \makebox[4em][s]{經歷}\enspace:\enspace
     \end{textblock}}}
-    \hspace*{\fill} \\
+    %\hspace*{\fill} \\
+    \vspace{2em}
     {\begin{textblock}{6}(0,4.1)
     \begin{figure}
-        \includegraphics[width=1.15in]{40723138} %{}內是圖片文件的相對路徑
+        \includegraphics[width=1.15in]{test38} %{}內是圖片文件的相對路徑
     \end{figure}
     \end{textblock}}
     {\renewcommand\baselinestretch{0.99}\selectfont %設定以下行距
@@ -250,10 +251,11 @@ Application of reinforcement
 \hspace*{\fill} \\
 \noindent\fontsize{14pt}{0em}\selectfont \makebox[4em][s]{經歷}\enspace:\enspace
     \end{textblock}}}
-    \hspace*{\fill} \\
+   % \hspace*{\fill} \\
+   \vspace{2em}
     {\begin{textblock}{6}(0,5.9)
     \begin{figure}
-        \includegraphics[width=1.15in]{40723148} %{}內是圖片文件的相對路徑
+        \includegraphics[width=1.15in]{test48} %{}內是圖片文件的相對路徑
     \end{figure}
     \end{textblock}}
     {\renewcommand\baselinestretch{0.99}\selectfont %設定以下行距
@@ -269,11 +271,11 @@ Application of reinforcement
 \hspace*{\fill} \\
 \noindent\fontsize{14pt}{0em}\selectfont \makebox[4em][s]{經歷}\enspace:\enspace
     \end{textblock}}}
-    \hspace*{\fill} \\
-
+    %\hspace*{\fill} \\
+\vspace{2em}
     {\begin{textblock}{6}(0,7.7)
     \begin{figure}
-        \includegraphics[width=1.15in]{40723150} %{}內是圖片文件的相對路徑
+        \includegraphics[width=1.15in]{test50} %{}內是圖片文件的相對路徑
     \end{figure}
     \end{textblock}}
     \renewcommand\baselinestretch{0.99}\selectfont %設定以下行距
