--- a/LaTeX報告/6_training_result.tex
+++ b/LaTeX報告/6_training_result.tex
@@ -78,5 +78,5 @@ Open AI Gym可以支持我們以自己搭建的環境進行訓練，因此我們
 \end{enumerate}
 
 \section{總結}
-訓練的時間越長，學習對打的成效越好，但訓練後期進步的幅度趨緩，因此得評估訓練的時間長度以符合整體效益。在模擬環境中利用RemoteAPI建置了跨平台控制，並運用OpenCV處理影像輔助玩家進行對打，
+訓練的時間越長，學習對打的成效越好，但訓練後期進步的幅度趨緩，因此得評估訓練的時間長度以符合整體效益。在模擬環境中利用RemoteAPI建置了跨平台控制，並運用OpenCV處理影像輔助玩家進行對打。
 \newpage
