--- a/LaTeX報告/9_reference.tex
+++ b/LaTeX報告/9_reference.tex
@@ -19,6 +19,7 @@
 \label{OGD2}
 \bibitem 5\href{https://reurl.cc/gz0YjN}{https://zh.wikipedia.org/wiki/HSLHSL和HSV色彩空間}
 \label{RGBtoHSV}
+\bibitem 6\href{https://reurl.cc/gzMm4N}{https://gist.github.com/karpathy/a4166c7fe253700972fcbc77e4ea32c5\# file-pg-pong-py}\label{R.pong1}
 %
 %\bibitem 3\href{https://blog.csdn.net/Csdn_Darry/article/details/107142216}{https://blog.csdn.net/CsdnDarry/article/details/107142216}
 \end{thebibliography}
