--- a/LaTeX報告/9_reference.tex
+++ b/LaTeX報告/9_reference.tex
@@ -20,6 +20,8 @@
 \bibitem 5\href{https://reurl.cc/gz0YjN}{https://zh.wikipedia.org/wiki/HSLHSL和HSV色彩空間}
 \label{RGBtoHSV}
 \bibitem 6\href{https://reurl.cc/gzMm4N}{https://gist.github.com/karpathy/a4166c7fe253700972fcbc77e4ea32c5\# file-pg-pong-py}\label{R.pong1}
+\bibitem 7\href{https://reurl.cc/xEQ3Ge}{https://github.com/schinger/pong\_ actor-critic/blob/master/pg-pong-ac.py}\label{R.pong1.1}
+
 %
 %\bibitem 3\href{https://blog.csdn.net/Csdn_Darry/article/details/107142216}{https://blog.csdn.net/CsdnDarry/article/details/107142216}
 \end{thebibliography}
