--- a/LaTeX報告/6_training_result.tex
+++ b/LaTeX報告/6_training_result.tex
@@ -49,7 +49,9 @@
 \end{figure}
 
 \section{訓練算法與參數比較}
- pong1版本是karpathy的pg\- pong.py的原始碼[\ref{R.pong1}]，pong1.1原始碼則是schinger的pong\_ actor\- critic/pg\- pong\- ac.py[\ref{R.pong1.1}]，pong1.2的是修改pong1的學習率參數從0.001調整到0.0001，並且將裁切後80*80的影像改成75*80。pong2將pong1的學習率保留不變，將啟動函數從sigmoid替換成softmax，並且將CPU運算換成GPU運算。下圖(圖.\ref{fig.比較中斷數據})為這幾個版本的訓練趨勢的紀錄提供做比較，訓練次數(圖.\ref{fig.比較中斷數據}之水平軸)為3000局做比較，小點為每局積分總和(圖.\ref{fig.比較中斷數據}之垂直軸)，線條為累積積分的均方誤差值，積分計算-21分代表對面得21分，即機器訓練所得分數-對面所得分數。訓練存在隨機性(Stochastic)，因此每次訓練所得趨勢會有所差異。
+ pong1版本是karpathy的pg\- pong.py的原始碼[\ref{R.pong1}]，pong1.1原始碼則是schinger的pong\_ actor\- critic/pg\- pong\- ac.py[\ref{R.pong1.1}]，pong1.2的是修改pong1的學習率參數從0.001調整到0.0001，並且將裁切後80*80的影像改成75*80。pong2將pong1的學習率保留不變，將啟動函數從sigmoid替換成softmax，並且將CPU運算換成GPU運算。\\
+ 
+ 下圖(圖.\ref{fig.比較中斷數據})為這幾個版本的訓練趨勢的紀錄提供做比較，訓練次數(圖.\ref{fig.比較中斷數據}之水平軸)為3000局做比較，小點為每局積分總和(圖.\ref{fig.比較中斷數據}之垂直軸)，線條為累積積分的均方誤差值，積分計算$-21$分代表對面得21分，即機器訓練所得分數-對面所得分數。訓練存在隨機性(Stochastic)，因此每次訓練所得趨勢會有所差異。\\
 \begin{table}[hbt!]
 \center\large
 \setlength{\tabcolsep}{0.75cm}{
@@ -61,17 +63,17 @@
 \hline  pong2 & 綠色 & [\ref{R.pong1}] \\
 \hline
 \end{tabular}}
-\caption{\Large 算法標示}
+\caption{\Large 版本標示}
 \end{table}
 
 \begin{figure}[hbt!]
 \begin{center}
 \includegraphics[width=15cm]{pong}
-\caption{\Large 各算法差異}
+\caption{\Large 各版本差異}
 \label{fig.比較中斷數據}
 \end{center}
 \end{figure}
-觀察後得到，
+觀察後發現，pong2版本的訓練結果得分較高，pong1.2的訓練結果為次高，pong1及pong1.1的版本沒有收斂，訓練對打的表現沒有進步的跡象，參數還需做調整及測試，pong2及pong1.2為主要選擇訓練演算法。接下來測試pong1的學習率調整成0.0001，pong1.2的學習率上調到0.001，
  
 \section{CoppeliaSim RemoteAPI}
 在進行強化學習時主要是透過CoppeliaSim中的Remote API 函數來取得模擬場景中所需要的資訊，並在進行訓練後再回傳到CoppeloaSim做控制的動作。\\
