--- a/LaTeX報告/4072pj1.tex
+++ b/LaTeX報告/4072pj1.tex
@@ -169,7 +169,7 @@ Application of reinforcement
 \end{center}
 %=-------------------------內容----------------------=%
 \input{1_introduction.tex}
-\input{2_machine_learning.tex}
+%\input{2_machine_learning.tex}
 \input{3_training_env.tex}
 \input{4_simulation.tex}
 \input{5_server.tex}
