--- a/LaTeX報告/4072pj1.tex
+++ b/LaTeX報告/4072pj1.tex
@@ -255,7 +255,7 @@ Application of reinforcement
    \vspace{2em}
     {\begin{textblock}{6}(0,5.9)
     \begin{figure}
-        \includegraphics[width=1.15in]{test48} %{}內是圖片文件的相對路徑
+        \includegraphics[width=1.15in]{148} %{}內是圖片文件的相對路徑
     \end{figure}
     \end{textblock}}
     {\renewcommand\baselinestretch{0.99}\selectfont %設定以下行距
@@ -263,7 +263,7 @@ Application of reinforcement
 \noindent\noindent\fontsize{14pt}{0em}\selectfont \makebox[4em][s]{姓名}\enspace:\enspace
 \noindent\fontsize{14pt}{0em}\selectfont \makebox[4em][s]{鄭博鴻}\\ \hspace*{\fill} \\
 \noindent\fontsize{14pt}{0em}\selectfont \makebox[4em][s]{學號}\enspace:\enspace
-\noindent\fontsize{14pt}{0em}\selectfont \makebox[4em][s]{40723153} \\ \hspace*{\fill} \\
+\noindent\fontsize{14pt}{0em}\selectfont \makebox[4em][s]{40723148} \\ \hspace*{\fill} \\
 \noindent\fontsize{14pt}{0em}\selectfont \makebox[4em][s]{畢業學校}\enspace:\enspace
 \noindent\fontsize{14pt}{0em}\selectfont \makebox[9em][s]{國立虎尾科技大學}\\
 \noindent\fontsize{14pt}{0em}\selectfont \makebox[5em][s]{\quad}\enspace\enspace
