--- a/LaTeX報告/1_introduction.tex
+++ b/LaTeX報告/1_introduction.tex
@@ -4,7 +4,7 @@
 \setcounter{page}{1}  %設定頁數
 \fontsize{14pt}{2.5pt}\sectionef
 \section{研究動機}
-機器學習與各領域結合的應用越來越廣泛，在機電系統採用強化學習是為了讓機電系統的控制達到最佳化。本專題以實體的冰球機(圖.\ref{fig.冰球機})之機電系統作為訓練模型，將實體機器轉移到虛擬環境(圖.\ref{fig.模擬冰球機})進行模擬，為了找到適合的演算方式，因此將模型簡化(圖.\ref{fig.pong_gym})後再進行測試各種算法的優劣，透過不斷的訓練來得到一個優化過的對打系統。\\
+機器學習與各領域結合的應用越來越廣泛，在機電系統採用強化學習是為了讓機電系統的控制達到最佳化。本專題以實體的冰球機(圖.\ref{fig.冰球機})之機電系統作為訓練模型，將實體機器轉移到虛擬環境(圖.\ref{fig.模擬冰球機})進行模擬，為了找到適合的訓練參數，因此將模型簡化(圖.\ref{fig.pong_gym})後再進行測試各種參數的優劣，透過不斷的訓練來得到一個優化過的對打系統。\\
 
 \begin{figure}[hbt!]
 \begin{center}
@@ -27,7 +27,7 @@
 
 
 \section{研究目的與方法}
-本研究分三大部分，第一運用OpenAI Gym裡內建編譯的ATARI 2600遊戲Pong-v0，來作為訓練環境，加上強化學習的理論，測試不同演算法以訓練出最佳化的對打系統，第二將整個簡化後冰球機導入CoppilaSim模擬環境並嘗試進行虛擬訓練，成為優化的對打機電系統。第三則是嘗試透過架設伺服器與虛擬環境結合。\\
+本研究分三大部分，第一運用OpenAI Gym裡內建編譯的ATARI 2600遊戲Pong-v0，來作為訓練環境，加上強化學習的理論，測試不同演算法參數以訓練出最佳化的對打系統，第二將整個簡化後冰球機導入CoppilaSim模擬環境並嘗試進行虛擬訓練，成為優化的對打機電系統。第三則是嘗試透過架設伺服器與虛擬環境結合。\\
  
 透過簡化實體冰球機並導入虛擬環境，進行虛擬訓練，使用Gym的Pong當作對應的2D虛擬訓練環境，測試算法和訓練效果，篩選適合的算法與參數。\\
 
