--- a/LaTeX報告/abstract.tex
+++ b/LaTeX報告/abstract.tex
@@ -7,7 +7,7 @@
 \LARGE\textbf{摘~~要}\\
 \end{center}
 \begin{flushleft}
-\fontsize{14pt}{20pt}\sectionef\hspace{12pt} 產業中的需求提升因而生產、製造、研發等效率需要有所提升，最佳化的方式能有的提升效率。本專題將以實體冰球機的機電系統簡化進行強化學習，並結合類神經網路，測試不同演算法使冰球機對打控制系統最佳化，並嘗試將其算法應用到實體機電系統上。\\[12pt]
+\fontsize{14pt}{20pt}\sectionef\hspace{12pt} 科學計算的發展趨勢在深度學習扮演重要角色：特定語言的發展將多維矩陣透過數學的方式使用，在不同程式語言中搭配套件使運算效率提高。自動微分的技術發展讓導數計算用於優化深度學習的梯度。隨著軟體使用朝開源的開發環境發展，由於開源環境的開放性、靈活性能夠滿足新的或不斷變化的需求，促使在這樣的環境開發、研究成了必備技能。硬體部分則是多核GPU的發展提供所需的計算能力。這些技術的發展促使AI這個領域漸趨成熟，漸漸的從研究性質拓展到實際應用的層面。\\[12pt]
 
 \fontsize{14pt}{20pt}\sectionef\hspace{12pt} 此專題是運用實體冰球對打機，將其導入CoppeliaSim模擬環境並給予對應設置，將其機電系統簡化並運用Open AI Gym進行訓練，找到適合此系統的演算法後，再到CoppeliaSim模擬環境中進行測試演算法在實際運用上的可行性。並嘗試透過架設伺服器將CoppeliaSim影像串流到網頁供使用者觀看或操控。\\[12pt]
 
