--- a/LaTeX報告/abstract.tex
+++ b/LaTeX報告/abstract.tex
@@ -7,9 +7,9 @@
 \LARGE\textbf{摘~~要}\\
 \end{center}
 \begin{flushleft}
-\fontsize{14pt}{20pt}\sectionef\hspace{12pt} 科學計算的發展趨勢在深度學習扮演重要角色：特定語言的發展將多維矩陣透過數學的方式使用，在不同程式語言中搭配套件使運算效率提高。自動微分的技術發展讓導數計算用於優化深度學習的梯度。隨著軟體使用朝開源的開發環境發展，由於開源環境的開放性、靈活性能夠滿足新的或不斷變化的需求，促使在這樣的環境開發、研究成了必備技能。硬體部分則是多核GPU的發展提供所需的計算能力。這些技術的發展促使AI這個領域漸趨成熟，漸漸的從研究性質拓展到實際應用的層面。\\[12pt]
+\fontsize{14pt}{20pt}\sectionef\hspace{12pt}\quad 由於矩陣計算、自動求導技術、開源開發環境、多核GPU運算硬體等這四大發展趨勢，促使AI領域快速發展，藉由這樣的契機，將實體機電系統透過虛擬化訓練提高訓練效率，再將訓練完的模型應用到實體上。\\[12pt]
 
-\fontsize{14pt}{20pt}\sectionef\hspace{12pt} 此專題是運用實體冰球對打機，將其導入CoppeliaSim模擬環境並給予對應設置，將其機電系統簡化並運用Open AI Gym進行訓練，找到適合此系統的演算法後，再到CoppeliaSim模擬環境中進行測試演算法在實際運用上的可行性。並嘗試透過架設伺服器將CoppeliaSim影像串流到網頁供使用者觀看或操控。\\[12pt]
+\fontsize{14pt}{20pt}\sectionef\hspace{12pt}\quad 此專題是運用實體冰球對打機，將其導入CoppeliaSim模擬環境並給予對應設置，將其機電系統簡化並運用Open AI Gym進行訓練，找到適合此系統的演算法後，再到CoppeliaSim模擬環境中進行測試演算法在實際運用上的可行性。並嘗試透過架設伺服器將CoppeliaSim影像串流到網頁供使用者觀看或操控。\\[12pt]
 
 \end{flushleft}
 \begin{center}
@@ -22,9 +22,9 @@
 \begin{center}
 \LARGE\textbf\sectionef{Abstract}\\
 \begin{flushleft}
-\fontsize{14pt}{16pt}\sectionef\hspace{12pt} As the demand in the industry increases, the efficiency of production, manufacturing, research and development needs to be improved, and the optimization method can improve the efficiency. This topic will use the simplification of the electromechanical system of the physical ice hockey machine for reinforcement learning, combined with neural networks, test different algorithms to optimize the ice hockey machine sparring control system, and try to apply its algorithm to the physical electromechanical system.\\[12pt]
+\fontsize{14pt}{16pt}\sectionef\hspace{12pt}\quad As the demand in the industry increases, the efficiency of production, manufacturing, research and development needs to be improved, and the optimization method can improve the efficiency. This topic will use the simplification of the electromechanical system of the physical ice hockey machine for reinforcement learning, combined with neural networks, test different algorithms to optimize the ice hockey machine sparring control system, and try to apply its algorithm to the physical electromechanical system.\\[12pt]
 
-\fontsize{14pt}{16pt}\sectionef\hspace{12pt} This project is to use the physical air hockey to play machine, introduce it into the CoppeliaSim simulation environment and give the corresponding settings, simplify its electromechanical system and use Open AI Gym for training, find an algorithm suitable for this system, and then perform it in the CoppeliaSim simulation environment Feasibility of testing algorithm in practical application. And try to stream CoppeliaSim images to web pages for users to watch or manipulate by setting up a server.\\
+\fontsize{14pt}{16pt}\sectionef\hspace{12pt}\quad This project is to use the physical air hockey to play machine, introduce it into the CoppeliaSim simulation environment and give the corresponding settings, simplify its electromechanical system and use Open AI Gym for training, find an algorithm suitable for this system, and then perform it in the CoppeliaSim simulation environment Feasibility of testing algorithm in practical application. And try to stream CoppeliaSim images to web pages for users to watch or manipulate by setting up a server.\\
 \end{flushleft}
 \begin{center}
 \fontsize{14pt}{16pt}\selectfont\sectionef Keyword:  nerual network、reinforcement learning、 CoppeliaSim、OpenAI Gym
