update english abstract

--- a/LaTeX報告/abstract.tex
+++ b/LaTeX報告/abstract.tex
@@ -22,7 +22,7 @@
 \begin{center}
 \LARGE\textbf\sectionef{Abstract}\\
 \begin{flushleft}
-\fontsize{14pt}{16pt}\sectionef\hspace{12pt}\quad As the demand in the industry increases, the efficiency of production, manufacturing, research and development needs to be improved, and the optimization method can improve the efficiency. This topic will use the simplification of the electromechanical system of the physical ice hockey machine for reinforcement learning, combined with neural networks, test different algorithms to optimize the ice hockey machine sparring control system, and try to apply its algorithm to the physical electromechanical system.\\[12pt]
+\fontsize{14pt}{16pt}\sectionef\hspace{12pt}\quad Due to the four major development trends of multidimensional arrays  computing, automatic differentiation, open source development environment, and multi-core GPUs computing hardware. The rapid development of the AI field has been promoted. With this opportunity, the entity electomchanical system can be virtualized to improve training efficiency. Apply the trained model to the entity.\\[12pt]
 
 \fontsize{14pt}{16pt}\sectionef\hspace{12pt}\quad This project is to use the physical air hockey to play machine, introduce it into the CoppeliaSim simulation environment and give the corresponding settings, simplify its electromechanical system and use Open AI Gym for training, find an algorithm suitable for this system, and then perform it in the CoppeliaSim simulation environment Feasibility of testing algorithm in practical application. And try to stream CoppeliaSim images to web pages for users to watch or manipulate by setting up a server.\\
 \end{flushleft}
